# DiffBio

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASING.md  activate.sh  conftest.py  dot_env_template  index.html  mkdocs-dev.yml  mkdocs.yml  pyproject.toml  setup.sh
.github/workflows/: build-verification.yml  ci.yml  docs.yml  publish.yml  quality-checks.yml  security.yml
benchmarks/: README.md  __init__.py  _base.py  _calibrax.py  _classification.py  _common.py  _foundation_models.py  _gradient.py  _optimizers.py  alignment_benchmark.py  circular_fingerprint_benchmark.py  dashboard.py  fingerprint_benchmark.py  generate_report.py  molnet_benchmark.py  regression.py  run_all.py  schema.py  scvi_benchmark.py  singlecell_benchmark.py
benchmarks/_baselines/: __init__.py  alignment.py  clustering.py  de.py  deconvolution.py  dti.py  epigenomics.py  genomics_foundation.py  grn.py  md.py  molnet.py  protein.py  rna.py  scib.py  singlecell_foundation.py  trajectory.py
benchmarks/_metrics/: __init__.py  alignment.py  grn.py  scib_bridge.py  structure.py
benchmarks/alignment/: __init__.py  _encoding.py  alignment_benchmark.py  bench_msa.py  bench_pairwise.py
benchmarks/assembly/: __init__.py  assembly_benchmark.py
benchmarks/crossmodality/: README.md  __init__.py  audit_leakfree_scatac.py  audit_overfitting.py  audit_regularization_scatac.py  dna_classification.py  dna_deepening.py  perturbation_ablation.py  perturbation_identity.py  prepare_perturbation.py  prepare_scatac.py  prepare_variant.py  scatac_annotation.py  scatac_deepening.py  trainable_basis.py  variant_read_pooling.py
benchmarks/drug_discovery/: __init__.py  bench_dti.py  bench_molnet.py  circular_fingerprint_benchmark.py  fingerprint_benchmark.py  molnet_benchmark.py
benchmarks/epigenomics/: __init__.py  _contextual.py  _task_benchmarks.py  bench_chromatin_state_prediction.py  bench_contextual_peak_calling.py  bench_peak_calling.py  contextual_suite.py  epigenomics_benchmark.py
benchmarks/genomics/: __init__.py  _foundation.py  _sequence_classification.py  _task_benchmarks.py  bench_promoter.py  bench_splice_site.py  bench_tfbs.py  foundation_suite.py
benchmarks/language_models/: __init__.py  language_model_benchmark.py
benchmarks/metabolomics/: peak_picking.py  peak_picking_sweep.py
benchmarks/molecular_dynamics/: __init__.py  bench_lj.py  molecular_dynamics_benchmark.py
benchmarks/multiomics/: __init__.py  bench_spatial_deconv.py  multiomics_benchmark.py
benchmarks/normalization/: __init__.py  dimreduction_benchmark.py
benchmarks/preprocessing/: __init__.py  preprocessing_benchmark.py
benchmarks/protein/: __init__.py  bench_secondary_structure.py  protein_structure_benchmark.py
benchmarks/rna_structure/: __init__.py  bench_rna_fold.py  rna_structure_benchmark.py
benchmarks/singlecell/: __init__.py  _foundation.py  _gate2_arms.py  _prep_cytof.py  _run_compute_cost.sh  _stage_cytof.R  bench_batch_correction.py  bench_clustering.py  bench_foundation_annotation.py  bench_frozen_annotation.py  bench_grn.py  bench_trajectory.py  bench_vae_integration.py  compute_cost.py  cytof_gating.py  foundation_suite.py  frozen_annotation_baseline.py  gate1_frozen_pipeline.py  gate2_joint_pipeline.py  grn_benchmark.py  hvg_gate.py  hvg_gate_stg.py  hvg_gate_stg_matched.py  scvi_benchmark.py  singlecell_benchmark.py  trajectory_benchmark.py
benchmarks/specialized/: __init__.py  crispr_benchmark.py  metabolomics_benchmark.py  population_benchmark.py
benchmarks/statistical/: __init__.py  bench_de.py  statistical_benchmark.py
benchmarks/variant/: __init__.py  variant_calling_benchmark.py
diffbio/: 404.html  index.html  objects.inv  sitemap.xml
diffbio/_static/: extra.css
diffbio/javascripts/: mathjax.js
diffbio/search/: search_index.json
docs/: datarax-dynamic-output-structure-fix.md  index.md
docs/_static/: extra.css
docs/api/: sources.md  splitters.md
docs/design-docs/: differentiable-pipelines.md
docs/development/: benchmarks.md  contributing.md  example-documentation-design.md  testing.md
docs/examples/: overview.md
docs/getting-started/: core-concepts.md  installation.md  quickstart.md
docs/user-guide/: sources.md  splitters.md
examples/: README.md
examples/basics/: operator_pattern.ipynb  operator_pattern.py
examples/ecosystem/: calibrax_metrics.ipynb  calibrax_metrics.py  scvi_benchmark.ipynb  scvi_benchmark.py
examples/perturbation/: perturbation_data_loading.ipynb  perturbation_data_loading.py
examples/pipelines/: singlecell_pipeline.ipynb  singlecell_pipeline.py
examples/singlecell/: batch_correction.ipynb  batch_correction.py  cell_annotation.ipynb  cell_annotation.py  clustering.ipynb  clustering.py  doublet_detection.ipynb  doublet_detection.py  grn_inference.ipynb  grn_inference.py  imputation.ipynb  imputation.py  spatial_analysis.ipynb  spatial_analysis.py  trajectory.ipynb  trajectory.py
paper/: .gitignore  diffbio.tex  make_figures.py  references.bib
scripts/: _advanced_plots.py  _plot_helpers.py  generate_benchmark_plots.py  generate_example_outputs.py  jupytext_converter.py  setup_env.py  train_variant_calling.py  verify_dependency_runtime.py  verify_gpu_setup.py
src/diffbio/: __init__.py  configs.py  constants.py
tests/: __init__.py  conftest.py  mocks.py  test_ownership_boundaries.py
tests/benchmarks/: __init__.py  conftest.py  test_adapters.py  test_alignment_metrics.py  test_base.py  test_baselines.py  test_bench_batch_correction.py  test_bench_batch_correction_foundation.py  test_bench_clustering.py  test_bench_de.py  test_bench_dti.py  test_bench_foundation_annotation.py  test_bench_foundation_annotation_real.py  test_bench_frozen_annotation.py  test_bench_frozen_annotation_real.py  test_bench_grn.py  test_bench_lj.py  test_bench_molnet.py  test_bench_msa.py  test_bench_pairwise.py  test_bench_peak_calling.py  test_bench_rna_fold.py  test_bench_secondary_structure.py  test_bench_spatial_deconv.py  test_bench_trajectory.py  test_bench_vae_integration.py  test_end_to_end.py  (+22 more)
(+677 files in other folders)
