[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.18"]

[dependency-groups]
dev = [
  "bandit[toml]>=1.8.6",
  "import-linter>=2.5",
  "interrogate>=1.7.0",
  "nbqa>=1.9.1",
  "pylint>=3.3.8",
  "pytest-json-report>=1.5.0",
  "pytest-randomly>=3.16.0",
  "radon>=6.0.1"
]

[project]
authors = [{name = "Mahdi Shafiei"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License"
]
dependencies = [
  # Datarax - operator, source, and pipeline contracts
  "datarax>=0.1.3",
  # Artifex - modeling, modality, and transformer substrate
  "avitai-artifex>=0.1.0",
  # Opifex - scientific ML, operator learning, and advanced optimization
  "opifex>=0.1.0",
  # Calibrax - benchmarking, comparison, profiling, and regression control
  "calibrax>=0.1.1",
  # JAX ecosystem
  "beartype>=0.14.1",
  "chex>=0.1.7",
  "flax>=0.12.0",
  "jax>=0.6.1",
  "jaxtyping>=0.2.20",
  "optax>=0.1.4",
  "orbax-checkpoint>=0.11.10",
  # Scientific computing
  "numpy>=1.24",
  "scipy>=1.10",
  # Bioinformatics
  "biopython>=1.81",
  "anndata>=0.9.1",
  "h5py>=3.7",
  # Development essentials
  "pre-commit>=4.3.0",
  "ruff>=0.1.5",
  "jax-md>=0.2.27",
  "rdkit>=2025.9.3"
]
description = "DiffBio: End-to-end differentiable bioinformatics pipelines built on Datarax, Artifex, Opifex, and Calibrax"
keywords = ["jax", "flax", "bioinformatics", "differentiable", "variant-calling", "alignment", "machine-learning"]
license = {file = "LICENSE"}
name = "diffbio"
readme = "README.md"
requires-python = ">=3.11"
version = "0.1.0"

[project.optional-dependencies]
all = ["diffbio[benchmark,dev,docs,genomics,gpu,soft-ops-advanced,soft-ops-ot,test,torch-io]"]
benchmark = [
  "scib-metrics>=0.5",
  "pynndescent>=0.5",
  "squidpy>=1.4",
  "tabulate>=0.9",
  "deepchem>=2.8.0",
  "pandas>=2.0",
  "matplotlib>=3.7"
]
cuda-dev = ["diffbio[dev,gpu]"]
dev = [
  "bandit[toml]>=1.8.6",
  "build>=1.0.3",
  "coverage>=7",
  "flake8>=7.0",
  "flake8-functions-names>=0.4",
  "import-linter>=2.5",
  "ipykernel>=6.29.5",
  "interrogate>=1.7.0",
  "pylint>=3.3.8",
  "pyright>=1.1.336",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.23",
  "pytest-benchmark>=4",
  "pytest-cov>=6.1.1",
  "pytest-env>=1.0.1",
  "pytest-randomly>=3.16.0",
  "pytest-timeout>=2.1",
  "pytest-xdist>=3.6",
  "radon>=6.0.1",
  "shellcheck-py>=0.10.0.1",
  "python-dotenv>=1",
  "ruff>=0.1.5",
  "pytest-json-report>=1.5.0",
  "wemake-python-styleguide>=1.0"
]
docs = [
  "griffe>=1.7.3",
  "mkdocs>=1.6.1",
  "mkdocs-include-exclude-files>=0.1",
  "mkdocs-material>=9.6.7",
  "mkdocstrings>=0.28.3",
  "mkdocstrings-python>=1.1.2",
  "pymdown-extensions>=10.14.3"
]
genomics = ["pysam>=0.22.0", "pyfaidx>=0.8.0"]
gpu = ["jax[cuda12]>=0.6.1", "jaxlib>=0.6.1"]
soft-ops-advanced = ["optimistix>=0.0.9", "lineax>=0.0.8"]
soft-ops-ot = ["diffbio[soft-ops-advanced]", "ott-jax>=0.5.0"]
test = [
  "beartype>=0.14.1",
  "coverage>=7",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.23",
  "pytest-benchmark>=4",
  "pytest-cov>=6.1.1",
  "pytest-env>=1.0.1",
  "pytest-randomly>=3.16.0",
  "pytest-timeout>=2.1",
  "pytest-xdist>=3.6"
]
torch-io = ["torch>=1.13.0"]

[project.urls]
"Bug Tracker" = "https://github.com/avitai/DiffBio/issues"
Documentation = "https://diffbio.readthedocs.io"
Source = "https://github.com/avitai/DiffBio"

[tool.bandit]
exclude_dirs = ["tests", "scripts", "examples", "memory-bank", ".deprecated", ".venv"]
skips = ["B101", "B110"]

[tool.coverage.html]
directory = "htmlcov"
skip_covered = false
skip_empty = false

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
  "pass",
  "raise ImportError"
]
fail_under = 80
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "*/conftest.py", "*/__pycache__/*", "*/scripts/*", "*/examples/*", "*/memory-bank/*"]
parallel = true
source = ["src"]

[tool.coverage.xml]
output = "coverage.xml"

[tool.hatch.build.targets.sdist]
include = ["src/diffbio", "README.md", "LICENSE", "pyproject.toml"]

[tool.hatch.build.targets.wheel]
packages = ["src/diffbio"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.importlinter]
root_package = "diffbio"

[[tool.importlinter.contracts]]
forbidden_modules = ["diffbio.operators", "diffbio.pipelines", "diffbio.sources", "diffbio.splitters"]
name = "Core must not import high-level modules"
source_modules = ["diffbio.core"]
type = "forbidden"

[[tool.importlinter.contracts]]
forbidden_modules = ["diffbio.pipelines"]
name = "Operators must not import pipelines"
source_modules = ["diffbio.operators"]
type = "forbidden"

[[tool.importlinter.contracts]]
forbidden_modules = ["diffbio.operators", "diffbio.pipelines"]
name = "Sources must not import operators or pipelines"
source_modules = ["diffbio.sources"]
type = "forbidden"

[[tool.importlinter.contracts]]
forbidden_modules = ["diffbio.operators", "diffbio.pipelines"]
name = "Splitters must not import operators or pipelines"
source_modules = ["diffbio.splitters"]
type = "forbidden"

[[tool.importlinter.contracts]]
forbidden_modules = ["diffbio.operators", "diffbio.pipelines"]
name = "Samplers must not import operators or pipelines"
source_modules = ["diffbio.samplers"]
type = "forbidden"

[[tool.importlinter.contracts]]
forbidden_modules = ["diffbio.pipelines"]
name = "Lower layers must not import pipelines"
source_modules = [
  "diffbio.core",
  "diffbio.losses",
  "diffbio.operators",
  "diffbio.samplers",
  "diffbio.sequences",
  "diffbio.sources",
  "diffbio.splitters",
  "diffbio.utils"
]
type = "forbidden"

[tool.interrogate]
exclude = ["tests", "examples", "memory-bank", "scripts", ".deprecated"]
fail-under = 80
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-module = true
quiet = false

[tool.pydocstyle]
add-ignore = ["D100", "D104", "D105", "D107", "D202", "D212", "D415"]
convention = "google"
match = ".*\\.py$"
match-dir = "^(?!tests|examples).*"

[tool.pyright]
exclude = ["docs", "examples", "scripts", ".deprecated", "**/__pycache__", "**/.venv", "memory-bank"]
extraPaths = ["."]
include = ["src", "tests"]
reportAbstractUsage = false
reportArgumentType = "warning"
reportAssignmentType = false
reportAttributeAccessIssue = false
reportCallIssue = "warning"
reportFunctionMemberAccess = false
reportGeneralTypeIssues = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false
reportIndexIssue = false
reportOperatorIssue = false
reportOptionalCall = false
reportOptionalIterable = false
reportOptionalMemberAccess = false
reportOptionalOperand = false
reportOptionalSubscript = false
reportPossiblyUnboundVariable = false
reportReturnType = "warning"
reportUnusedExpression = false
venv = ".venv"
venvPath = "."

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config --verbose --tb=short --color=yes --durations=10 --cov=src/ --cov-report=term-missing --cov-report=html --cov-fail-under=80 --timeout=300 --json-report --json-report-file=temp/test-results.json --json-report-indent=2"
cache_dir = ".pytest_cache"
console_output_style = "progress"
filterwarnings = [
  "ignore::DeprecationWarning:pkg_resources.*",
  "ignore::DeprecationWarning:jax.*",
  "ignore:jax.interpreters.xla.pytype_aval_mappings is deprecated:DeprecationWarning",
  "ignore::UserWarning:jax._src.xla_bridge",
  "ignore:.*cuSPARSE.*",
  "ignore:.*CUDA-enabled jaxlib.*",
  "ignore:Sharding info not provided when restoring.*:UserWarning:orbax.*",
  "ignore:Sharding info not provided when restoring.*:UserWarning",
  "ignore:'.type' is deprecated:DeprecationWarning",
  "ignore:unclosed <socket.socket.*:ResourceWarning",
  "ignore:unclosed event loop.*:ResourceWarning",
  "ignore::ResourceWarning"
]
log_cli = true
log_cli_level = "INFO"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "gpu: marks tests that require GPU (deselect with '-m \"not gpu\"')",
  "gpu_required: marks tests as requiring GPU (will fail if GPU unavailable)",
  "cuda: marks tests that specifically test CUDA functionality",
  "cpu: marks tests that should run on CPU only",
  "integration: marks tests as integration tests",
  "unit: marks tests as unit tests",
  "benchmark: marks tests as performance benchmarks",
  "e2e: marks tests as end-to-end tests",
  "performance: marks tests as performance tests",
  "network: marks tests that require network access (deselect with '-m \"not network\"')",
  "scbench: marks tests using scBench single-cell benchmark problems",
  "spatialbench: marks tests using SpatialBench spatial transcriptomics benchmark problems"
]
minversion = "6.0"
python_classes = "Test*"
python_files = "test_*.py"
python_functions = "test_*"
testpaths = ["tests"]

[tool.pytest-benchmark]
compare = ["last", "base"]
disable_gc = true
histogram = "histogram.svg"
min_rounds = 5
min_time = 0.1
save = "benchmark-results"
save_data = true
warmup = true
warmup_iterations = 3

[tool.pytest-env]
JAX_ENABLE_X64 = "0"
JAX_SKIP_CUDA_CONSTRAINTS_CHECK = "1"
LD_LIBRARY_PATH = "/usr/local/cuda/lib64"
XLA_PYTHON_CLIENT_MEM_FRACTION = "0.75"
XLA_PYTHON_CLIENT_PREALLOCATE = "false"

[tool.ruff]
exclude = ["memory-bank", ".deprecated", "examples", ".venv"]
extend-include = ["*.ipynb"]
line-length = 100
src = ["src"]
target-version = "py311"

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
fixable = ["I001", "F401", "E", "W", "W291", "W292", "W293", "F841"]
ignore = [
  "E402",
  "E721",
  "E731",
  "E741",
  "F722",
  "F821", # Undefined names in jaxtyping dimension annotations
  "W391",
  "E203",
  "UP006",
  "UP007",
  "UP015",
  "UP024",
  "UP035",
  "RUF005"
]
select = ["E", "F", "UP"]

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = []
known-first-party = ["diffbio"]
lines-after-imports = 2
order-by-type = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.uv]
python-preference = "only-managed"
